Register new endpoints and change the old ones to match