@@ -2,6 +2,8 @@ package io.autoinvestor.infrastructure.fetchers;
 
 import io.autoinvestor.domain.Asset;
 import io.autoinvestor.domain.AssetPriceFetcher;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 import yahoofinance.YahooFinance;
 import yahoofinance.Stock;
@@ -15,11 +17,19 @@ import java.util.Date;
 import java.util.List;
 import java.util.TimeZone;
 
-
 @Component
 public class YFinanceAssetPriceFetcher implements AssetPriceFetcher {
 
+    private static final Logger logger = LoggerFactory.getLogger(YFinanceAssetPriceFetcher.class);
     private static final int DAYS_LOOKBACK_BUFFER = 7;
+
+    static {
+        System.setProperty("http.agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64)");
+        System.setProperty(
+                "yahoofinance.baseurl.quotesquery1v7",
+                "https://query1.finance.yahoo.com/v6/finance/quote"
+        );
+    }
 
     @Override
     public float priceOn(Asset asset, Date date) {
@@ -34,25 +44,33 @@ public class YFinanceAssetPriceFetcher implements AssetPriceFetcher {
 
         try {
             Stock stock = YahooFinance.get(asset.ticker(), from, to, Interval.DAILY);
-            List<HistoricalQuote> history = stock.getHistory();
+            if (stock == null) {
+                throw new PriceNotAvailableException("No data returned for " + asset);
+            }
 
+            List<HistoricalQuote> history = stock.getHistory();
             HistoricalQuote bar = history.stream()
                     .filter(h -> h.getDate() != null)
                     .sorted((a, b) -> b.getDate().compareTo(a.getDate()))
                     .filter(h -> !h.getDate().after(target))
                     .findFirst()
                     .orElseThrow(() -> new PriceNotAvailableException(
-                            "No historical bar found for %s on/Before %s".formatted(asset, date)));
+                            String.format("No historical bar found for %s on or before %s", asset, date)
+                    ));
 
             BigDecimal close = bar.getClose() != null ? bar.getClose() : bar.getAdjClose();
             if (close == null) {
                 throw new PriceNotAvailableException(
-                        "Close price missing for %s on %s".formatted(asset, date));
+                        String.format("Close price missing for %s on %s", asset, date)
+                );
             }
+
             return close.floatValue();
         } catch (IOException ex) {
+            logger.error("Error fetching price for {} on {}: {}", asset, date, ex.getMessage(), ex);
             throw new PriceFetchFailedException(
-                    "Unable to fetch price for %s from Yahoo Finance".formatted(asset));
+                    String.format("Unable to fetch price for %s from Yahoo Finance", asset)
+            );
         }
     }
 }
